Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1270

lfs find -size returns "obd_uuid: (null) failed No such device"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • Lustre 2.2.0, Lustre 2.3.0
    • None
    • master branch
    • 3
    • 7617

      reproduce procedure:

      [mount a lustre filesystem on /mnt/lustre]
      $ touch /mnt/lustre/a
      $ lfs find -size +0 /mnt/lustre
      /mnt/lustre
      obd_uuid: (null) failed No such device

      root cause:
      In cb_find_init(), when a regular file's size or time to be checked, the code path goes under to

      cb_find_init()
              while (!decision) {
                      /* For regular files with the stripe the decision may have not
                       * been taken yet if *time or size is to be checked. */
                      LASSERT((S_ISREG(st->st_mode) &&
                              param->lmd->lmd_lmm.lmm_stripe_count) ||
                              param->mdtindex != OBD_NOT_FOUND);
      
                      if (param->obdindex != OBD_NOT_FOUND)
                              print_failed_tgt(param, path, LL_STATFS_LOV);
      
                      if (param->mdtindex != OBD_NOT_FOUND)
                              print_failed_tgt(param, path, LL_STATFS_LMV);
      
      

      And during the whole process, param->mdtindex hasn't initialized to OBD_NOT_FOUND, and print_failed_tgt() cannot find anything since none of obd uuid was specified in the process.

            bobijam Zhenyu Xu
            bobijam Zhenyu Xu
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: