LU-1270 utils: properly initialize traverse param

The find_param::mdtindex intialization was neglected.

Signed-off-by: Bobi Jam <bobijam@whamcloud.com>
Change-Id: I3018c346a4bbab0d7da7c7efdeeb201098ac1e53