lustre/utils/liblustreapi.c
@@ -1129,6 +1129,7 @@ static int common_param_init(struct find_param *param, char *path)
         param->got_uuids = 0;
         param->obdindexes = NULL;
         param->obdindex = OBD_NOT_FOUND;
+        param->mdtindex = OBD_NOT_FOUND;
         return 0;
 }
 
